--- a/Counter/Main.storyboard
+++ b/Counter/Main.storyboard
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N7x-po-BRj">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="N7x-po-BRj">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,77 +19,81 @@
                         <viewControllerLayoutGuide type="bottom" id="zZQ-k8-GlZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="rwP-Cm-lwu">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VtI-Bb-6yx">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="KpZ-dK-ua2">
+                                <rect key="frame" x="16" y="28" width="343" height="379"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="160"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=compact">
+                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="120"/>
+                                </variation>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zbg-Y4-Nqm">
+                                <rect key="frame" x="16" y="415" width="343" height="232"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="UjR-vE-v4T">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
-                                        <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="256"/>
-                                        <nil key="highlightedColor"/>
-                                        <variation key="heightClass=compact">
-                                            <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="196"/>
-                                        </variation>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="qAX-kv-mtS">
-                                        <rect key="frame" x="0.0" y="500" width="600" height="100"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DmC-iQ-8Ol">
-                                                <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
-                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="36"/>
-                                                <state key="normal" title="Reset">
-                                                    <color key="titleColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="resetCounter:" destination="N7x-po-BRj" eventType="touchUpInside" id="KHY-aB-b7P"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ec7-cD-uf8">
-                                                <rect key="frame" x="300" y="0.0" width="300" height="100"/>
-                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="42"/>
-                                                <state key="normal" title="Add"/>
-                                                <connections>
-                                                    <action selector="addCount:" destination="N7x-po-BRj" eventType="touchUpInside" id="aAb-TQ-aAa"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zPU-sm-feH">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="72"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
+                                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="+"/>
+                                        <connections>
+                                            <action selector="increaseCounter:" destination="N7x-po-BRj" eventType="touchUpInside" id="Sh6-n2-LnM"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qn7-13-Ssj">
+                                        <rect key="frame" x="0.0" y="80" width="343" height="72"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="60"/>
+                                        <color key="tintColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="-"/>
+                                        <connections>
+                                            <action selector="decreaseCounter:" destination="N7x-po-BRj" eventType="touchUpInside" id="MWo-Ff-G4P"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Htl-hc-5QZ">
+                                        <rect key="frame" x="0.0" y="160" width="343" height="72"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="6Bz-VS-vU2"/>
-                                            <constraint firstAttribute="width" constant="180" id="QFm-ug-sFa"/>
+                                            <constraint firstAttribute="height" constant="72" id="4C3-No-lUm">
+                                                <variation key="heightClass=compact" constant="44"/>
+                                            </constraint>
                                         </constraints>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="QFm-ug-sFa"/>
-                                            </mask>
-                                        </variation>
-                                        <variation key="heightClass=compact" axis="vertical">
-                                            <mask key="constraints">
-                                                <exclude reference="6Bz-VS-vU2"/>
-                                                <include reference="QFm-ug-sFa"/>
-                                            </mask>
-                                        </variation>
-                                    </stackView>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="24"/>
+                                        <color key="tintColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Reset"/>
+                                        <connections>
+                                            <action selector="resetCounter:" destination="N7x-po-BRj" eventType="touchUpInside" id="3Bq-Yg-ilV"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                                <variation key="heightClass=compact" axis="horizontal"/>
+                                <constraints>
+                                    <constraint firstItem="qn7-13-Ssj" firstAttribute="height" secondItem="zPU-sm-feH" secondAttribute="height" id="Aq9-vZ-2hQ"/>
+                                    <constraint firstItem="Htl-hc-5QZ" firstAttribute="height" secondItem="zPU-sm-feH" secondAttribute="height" id="x7v-BV-ODi"/>
+                                </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="VtI-Bb-6yx" firstAttribute="leading" secondItem="rwP-Cm-lwu" secondAttribute="leadingMargin" constant="-20" id="3P2-U1-MHG"/>
-                            <constraint firstItem="VtI-Bb-6yx" firstAttribute="top" secondItem="rwP-Cm-lwu" secondAttribute="topMargin" id="C9E-x4-MiI"/>
-                            <constraint firstItem="zZQ-k8-GlZ" firstAttribute="top" secondItem="VtI-Bb-6yx" secondAttribute="bottom" id="N00-Lq-fCn"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="VtI-Bb-6yx" secondAttribute="trailing" constant="-20" id="qA3-xW-HEM"/>
+                            <constraint firstItem="zZQ-k8-GlZ" firstAttribute="top" secondItem="zbg-Y4-Nqm" secondAttribute="bottom" constant="20" id="4Kz-Qi-hk7"/>
+                            <constraint firstItem="KpZ-dK-ua2" firstAttribute="trailing" secondItem="rwP-Cm-lwu" secondAttribute="trailingMargin" id="7Hp-m0-tyj"/>
+                            <constraint firstItem="KpZ-dK-ua2" firstAttribute="top" secondItem="hTh-GN-Et4" secondAttribute="bottom" constant="8" id="82I-qk-sFY"/>
+                            <constraint firstItem="zbg-Y4-Nqm" firstAttribute="leading" secondItem="rwP-Cm-lwu" secondAttribute="leadingMargin" id="8o0-9w-Y7J"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zbg-Y4-Nqm" secondAttribute="trailing" id="Bl2-N1-7wQ"/>
+                            <constraint firstItem="KpZ-dK-ua2" firstAttribute="leading" secondItem="rwP-Cm-lwu" secondAttribute="leadingMargin" id="err-C1-532"/>
+                            <constraint firstItem="zbg-Y4-Nqm" firstAttribute="top" secondItem="KpZ-dK-ua2" secondAttribute="bottom" constant="8" id="rRY-jx-bN1"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="countLabel" destination="UjR-vE-v4T" id="dor-af-6DB"/>
+                        <outlet property="countLabel" destination="KpZ-dK-ua2" id="EPY-nw-Ws9"/>
+                        <outletCollection property="buttons" destination="zPU-sm-feH" collectionClass="NSMutableArray" id="1lp-af-rkL"/>
+                        <outletCollection property="buttons" destination="qn7-13-Ssj" collectionClass="NSMutableArray" id="iYY-5s-4Jn"/>
+                        <outletCollection property="buttons" destination="Htl-hc-5QZ" collectionClass="NSMutableArray" id="BQ9-6o-gra"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F06-Ri-0jT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="373" y="369"/>
+            <point key="canvasLocation" x="372" y="368.36581709145429"/>
         </scene>
     </scenes>
 </document>
